WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236732
REGRESSION(
r285885
) Unable to exit Trip Details in Amtrak app
https://bugs.webkit.org/show_bug.cgi?id=236732
Summary
REGRESSION(r285885) Unable to exit Trip Details in Amtrak app
alan
Reported
2022-02-16 14:28:25 PST
<
rdar://87462825
>
Attachments
Patch
(5.20 KB, patch)
2022-02-16 15:08 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-02-16 15:08:31 PST
Created
attachment 452252
[details]
Patch
alan
Comment 2
2022-02-16 19:23:28 PST
@Rob, do you remember if there was any particular reason for adding this? I can't find anything related in the Changelog entry.
EWS
Comment 3
2022-02-16 20:24:49 PST
Committed
r289995
(
247381@main
): <
https://commits.webkit.org/247381@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452252
[details]
.
Rob Buis
Comment 4
2022-02-17 00:22:12 PST
(In reply to zalan from
comment #2
)
> @Rob, do you remember if there was any particular reason for adding this? I > can't find anything related in the Changelog entry.
Not in particular, I made a judgment call on all overflowX/Y call sites and likely got this one wrong. Since this change has no regressions this part of the original patch was probably wrong.
alan
Comment 5
2022-02-17 06:12:49 PST
(In reply to Rob Buis from
comment #4
)
> (In reply to zalan from
comment #2
) > > @Rob, do you remember if there was any particular reason for adding this? I > > can't find anything related in the Changelog entry. > > Not in particular, I made a judgment call on all overflowX/Y call sites and > likely got this one wrong.
Thanks for confirming it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug